--- a/controls.css
+++ b/controls.css
@@ -1,37 +1,64 @@
 /* Display the glossary in columns, as it's likely to be a long thing list. */
 .glossary-list {
-    columns: auto 10em;
-    border-style: solid;
-    border-width: thin;
-    padding: 10px;
+  columns: auto 10em;
+  border-style: solid;
+  border-width: thin;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .glossary-list .glossary-list-item {
-    display: list-item;
-    padding-left: 0px;
-    margin-left: 1em;
-    margin-bottom: 3px;
-    list-style: disc outside;
+  display: list-item;
+  padding-left: 0;
+  margin-left: 1em;
+  margin-bottom: 3px;
+  list-style: disc outside;
 }
 
 /* Wrap text within an audio button if it's too long for the column. */
 .glossary-list .tone-audio-button {
-    white-space: normal;
-    overflow-wrap: normal;
-    height: 100%;
-    text-align: left;
+  white-space: normal;
+  overflow-wrap: normal;
+  height: 100%;
+  text-align: left;
 }
 
 /* Don't underline glossary terms that don't have audio. */
 .glossary-list .replacement {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* DO underline glossary terms that DO have audio. */
 .glossary-list .tone-audio-button .replacement {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-.hide-glossary {
-    display: none;
+.hide-glossary,
+.hide-custom-replacements {
+  display: none;
+}
+
+#custom-replacements-status {
+  margin: 0.75em;
+}
+
+.custom-replacements {
+  border-style: solid;
+  border-width: thin;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+#glossary-button-div button {
+  margin: 0.5em;
+  margin-left: 0;
+}
+
+.custom-replacements summary {
+  padding-bottom: 0.5em;
+}
+
+.custom-replacements details p {
+  margin-left: 2em;
+  margin-right: 1.5em;
 }
